Changed assets complie to true

--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="panel-body">
         <p class="panel">
-          <strong>Hosta Name:</strong>
+          <strong>Host Name:</strong>
           <%= @host.name %>
         </p>
 
