--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -15,7 +15,6 @@ body {
    position: fixed;
    top: 50%;
    left: 50%;
-   /* bring your own prefixes */
    transform: translate(-50%, -50%);
  }
 
@@ -29,6 +28,7 @@ body {
 .background-image {
   background: url('background.jpg') no-repeat center center fixed;
   background-size: cover;
+  margin-top: 75px; // for fixed navigation bar
   height: 100%;
 }
 
