--- a/app/views/host_types/show.html.erb
+++ b/app/views/host_types/show.html.erb
@@ -16,8 +16,12 @@
           <td><%= link_to host.name, host %></td>
           <td>
             <% host.properties.each do |name, value| %>
-              <b><%= name.humanize %>:</b>
-              <%= value %>
+              <strong><%= name.humanize %>:</strong>
+              <% if value =~ /^([1-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])(\.([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])){3}(?:\-([1-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]))?$/ %>
+                <a href="http://<%= value %>" target="_blank"><%= value %></a><br>
+              <% else %>
+                <%= value %><br>
+              <% end %>
             <% end %>
           </td>
         </tr>
