--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -22,7 +22,11 @@
 
         <% @host.properties.each do |name, value| %>
           <strong><%= name.humanize %>:</strong>
-          <%= value %>
+					<% if value =~ /^([1-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])(\.([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])){3}(?:\-([1-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]))?$/ %>
+						<a href="http://<%= value %>" target="_blank"><%= value %></a>
+					<% else %>
+						<%= value %>
+					<% end %>
           <br>
         <% end %>
       </div>
